--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,8 @@
     "version": "1.0.0",
     "manifest_version": 3,
     "background": {
-      "service_worker": "src/google/background.js"
+      "service_worker": "src/google/background.js",
+      "type": "module"
     },
     "action": {
       "default_popup": "dist/index.html"
